# platform.core.uifw.libscl-common

./: CMakeLists.txt  README  libscl-common.pc.in
packaging/: libscl-common.spec
src/: sclcast-efl.h  sclcast.h  sclcommon.cpp  sclcommon.h  scltypes.h
