CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(libscl-common CXX)

SET(SRCS
    src/sclcommon.cpp
)

SET(PACKAGE ${PROJECT_NAME})
SET(PKGNAME ${PACKAGE})
SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(LIBDIR ${LIB_INSTALL_DIR})

IF("${CMAKE_BUILD_TYPE}" STREQUAL "")
    SET(CMAKE_BUILD_TYPE "Release")
ENDIF()
MESSAGE(STATUS "Build type: ${CMAKE_BUILD_TYPE}")

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src
                    ${CMAKE_SOURCE_DIR}/src/include
                   )

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED
        evas
        )

FOREACH(flag ${pkgs_CFLAGS})
    SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${EXTRA_CFLAGS} -fPIC -Wall")
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2 -g")

ADD_DEFINITIONS("-DPACKAGE=\"${PACKAGE}\"")
ADD_DEFINITIONS("-DPACKAGE_NAME=\"${PKGNAME}\"")
ADD_DEFINITIONS("-DLOG_TAG=\"LIBSCL_COMMON\"")
ADD_DEFINITIONS("-D__EFL__")

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkgs_LDFLAGS})

set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${LIBDIR})

INSTALL(FILES "${CMAKE_SOURCE_DIR}/src/sclcommon.h" DESTINATION include/libscl-common)
INSTALL(FILES "${CMAKE_SOURCE_DIR}/src/scltypes.h" DESTINATION include/libscl-common)
INSTALL(FILES "${CMAKE_SOURCE_DIR}/src/sclcast.h" DESTINATION include/libscl-common)
INSTALL(FILES "${CMAKE_SOURCE_DIR}/src/sclcast-efl.h" DESTINATION include/libscl-common)

CONFIGURE_FILE(${PROJECT_NAME}.pc.in ${PROJECT_NAME}.pc @ONLY)
INSTALL(FILES ${CMAKE_BINARY_DIR}/${PROJECT_NAME}.pc DESTINATION ${LIBDIR}/pkgconfig)
